--- a/drivers/cpufreq/Governors/Makefile
+++ b/drivers/cpufreq/Governors/Makefile
@@ -2,3 +2,7 @@
 obj-$(CONFIG_CPU_FREQ_GOV_PERFORMANCE)	+= cpufreq_performance.o
 obj-$(CONFIG_CPU_FREQ_GOV_POWERSAVE)	+= cpufreq_powersave.o
 obj-$(CONFIG_CPU_FREQ_GOV_COMMON)		+= cpufreq_governor.o
+obj-$(CONFIG_CPU_FREQ_GOV_INTERACTIVEX)	         += cpufreq_interactivex.o
+obj-$(CONFIG_CPU_FREQ_GOV_FRANKENSTEIN)        	 += cpufreq_frankenstein.o
+obj-$(CONFIG_CPU_FREQ_GOV_SMARTASS2)             += cpufreq_smartass2.o
+obj-$(CONFIG_CPU_FREQ_GOV_ONDEMANDX)             += cpufreq_ondemandx.o
