--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ modules.builtin
 *.zip
 *modules.order
 *.symvers
-out/
+*bzImage
 
 #
 # git files that we don't want to ignore even it they are dot-files
