--- a/arch/x86/configs/cyanogenmod_zenfone2_defconfig
+++ b/arch/x86/configs/cyanogenmod_zenfone2_defconfig
@@ -340,10 +340,23 @@ CONFIG_X86_SUPPORTS_MEMORY_FAILURE=y
 CONFIG_NO_BOOTMEM=y
 # CONFIG_MEMTEST is not set
 # CONFIG_MK8 is not set
+# CONFIG_MK10 is not set
+# CONFIG_MBARCELONA is not set
+# CONFIG_MBOBCAT is not set
+# CONFIG_MBULLDOZER is not set
+# CONFIG_MPILEDRIVER is not set
+# CONFIG_MJAGUAR is not set
 # CONFIG_MPSC is not set
-# CONFIG_MCORE2 is not set
 # CONFIG_MATOM is not set
+# CONFIG_MCORE2 is not set
+# CONFIG_MNEHALEM is not set
+# CONFIG_MWESTMERE is not set
+# CONFIG_MSANDYBRIDGE is not set
+# CONFIG_MIVYBRIDGE is not set
+# CONFIG_MHASWELL is not set
 CONFIG_MSLM=y
+# CONGIF_MNATIVE is not set
+# CONFIG_MBROADWELL is not set
 # CONFIG_GENERIC_CPU is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
 CONFIG_X86_L1_CACHE_SHIFT=6
