--- a/drivers/cpufreq/Governors/Makefile
+++ b/drivers/cpufreq/Governors/Makefile
@@ -2,7 +2,7 @@
 obj-$(CONFIG_CPU_FREQ_GOV_PERFORMANCE)	+= cpufreq_performance.o
 obj-$(CONFIG_CPU_FREQ_GOV_POWERSAVE)	+= cpufreq_powersave.o
 obj-$(CONFIG_CPU_FREQ_GOV_COMMON)		+= cpufreq_governor.o
-obj-$(CONFIG_CPU_FREQ_GOV_INTERACTIVEX)	         += cpufreq_interactivex.o
+obj-$(CONFIG_CPU_FREQ_GOV_BLUACTIVE)	         += cpufreq_bluactive.o
 obj-$(CONFIG_CPU_FREQ_GOV_FRANKENSTEIN)        	 += cpufreq_frankenstein.o
 obj-$(CONFIG_CPU_FREQ_GOV_LAGFREE)             += cpufreq_smartass2.o
 obj-$(CONFIG_CPU_FREQ_GOV_INTEL)             += cpufreq_intel.o
