--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -174,6 +174,12 @@ config CPU_FREQ_GOV_THESSJACTIVE
 	depends on CPU_FREQ	
 	help
 	  credits to TheSSJ
+	  
+config CPU_FREQ_GOV_ZZMOOVE
+	tristate "'zzmoove' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  This is a gov ported over from Samsung Devices.
 	
 config GENERIC_CPUFREQ_CPU0
 	tristate "Generic CPU0 cpufreq driver"
