Add Blu_Plug (Thanks @engstk ) && Regen

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -319,6 +319,14 @@ config SMP
 	  <http://www.tldp.org/docs.html#howto>.
 
 	  If you don't know what to do here, say N.
+	  
+
+config BLU_PLUG
+	bool "Dynamic hotplug driver"
+	depends on HOTPLUG_CPU
+	default n
+	help
+	  The Dynamic hotplug driver automatically online/offline CPUs proportional to system load.
 
 config X86_X2APIC
 	bool "Support x2apic"
